	couple properties.

	* gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: added bindings for 22
	extra functions (most of which are probably useful!).

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs: documentation changes
	and code formatting changes. Also added a few extra functions, in
	particular the ones I needed for my simulation visualiser.

2005-03-26 Duncan Coutts <duncan@coutts.uklinux.net>

	* mozembed/Graphics/UI/Gtk/MozEmbed.chs: use Int in the signal
	handler return type rather than (Num n, Integral n) => n since there's
	no need to be so general (and it breaks my new signals system!)

	* tools/callbackGen/gtkmarshal.list: comment out all the signal
	marshalers that are not currently used. This saves several 100k in a
	final striped program. Feel free to re-enable any of them at any time.

	* gtk/Graphics/UI/Gtk/Windows/Dialog.chs,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: documentation changes and
	code formatting changes.

	* gtk/Graphics/UI/Gtk/Windows/Dialog.chs: Ooops! over zelous merging.
	Minor fix.

2005-03-25 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ModuleScan.hs: match up against existing .hs modules if
	there is no .chs or .chs.pp files.

	* tools/apiGen/ApiGen.hs: minor knock-on change from above.

	* tools/apiGen/MarshalFixup.hs: more fixup info.

	* tools/apiGen/CodeGen.hs: pass whether the function is a constructor
	on to the marshaling functions. This allows them to add castPtr for
	constructors. Output the constructors in the same order as they occur
	in the original module (same as we do for functions). Change
	KnownSymbols map to include the full chaing of parents of each class
	rather than just a clasification of whether they inherit from GObject
	or GtkObject. For leaf classes, generate the properties with the
	specific type rather than it's corresponding typeclass.

	* tools/apiGen/Marshal.hs: The KnownSymbols map change described
	above. Add castPtr for constructors and include the specific types